# galgame-launcher

./: .gitignore  README.en.md  README.md  README.zh-CN.md  index.html  package.json  run-galgame-launcher.bat  tailwind.config.ts  tsconfig.node.json
src/: App.tsx  i18n.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  store.rs
src/components/: AddGameModal.tsx  GameCard.tsx  GameGrid.tsx  Sidebar.tsx  Toast.tsx
src/hooks/: useGames.ts  useLocale.ts
