[package]
name = "game-launcher"
version = "0.1.0"
description = "A PCL-inspired Galgame desktop launcher"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "game_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4", "serde"] }
